--- a/src/features/suggested_matches_filters/suggested_matches_filters.css
+++ b/src/features/suggested_matches_filters/suggested_matches_filters.css
@@ -6,3 +6,6 @@
 #filterButtons {
   float: right;
 }
+body.page-Special_EditFamilySteps table {
+  clear: both;
+}
